# Android-Logger

./: ANDROID_LOGGER_DOCUMENT.md  APPROACHES.md  README.md  install_logdaemon.bat
LogDaemon/: README.md  log.sinfo.example  settings.gradle.kts
LogDaemon/app/: build.gradle.kts
LogDaemon/app/src/main/: AndroidManifest.xml
LogDaemon/app/src/main/cpp/: CMakeLists.txt  logdaemon_helper.c
LogDaemon/app/src/main/java/com/sqa/logdaemon/: BootReceiver.kt  LogCapture.kt  LogDaemonApp.kt  LogDaemonService.kt
LogDaemon/app/src/main/java/com/sqa/logdaemon/collector/: LogEntry.kt  LogcatLineParser.kt  PackageLogCollector.kt
LogDaemon/app/src/main/java/com/sqa/logdaemon/config/: ConfigParser.kt  DaemonConfig.kt
LogDaemon/app/src/main/java/com/sqa/logdaemon/session/: SessionManager.kt
LogDaemon/app/src/main/java/com/sqa/logdaemon/usb/: UsbMountLocator.kt  UsbStateReceiver.kt
LogDaemon/app/src/main/java/com/sqa/logdaemon/writer/: RawLogWriter.kt  SessionMetaWriter.kt  StatsCollector.kt  SummaryWriter.kt  TsvLogWriter.kt
LogDaemon/app/src/main/res/values/: strings.xml
logcollectord/: CMakeLists.txt  README.md  build.sh  install.sh  log.sinfo.example  logcollectord.c  logcollectord.rc
protein-tracker/: index.html
